--- a/ui/src/app/private/sightings/sightings.component.html
+++ b/ui/src/app/private/sightings/sightings.component.html
@@ -9,17 +9,11 @@
         name="term"
         class="form-control"
         [(ngModel)]="term"
-        placeholder="Type to search..." />
+        placeholder="Type to search..."/>
       <div class="form-text">Sent as query parameter to the listing endpoint.</div>
     </div>
+    <track-rejoice-filter-sidebar/>
 
-    <div class="mb-3">
-      <label class="form-label">Other filters (skeleton)</label>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="onlyMine" disabled />
-        <label class="form-check-label" for="onlyMine">Only mine (placeholder)</label>
-      </div>
-    </div>
 
     <div class="d-grid gap-2">
       <a routerLink="/sightings/new" class="btn btn-primary">Create Sighting</a>
