--- a/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
+++ b/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
@@ -1,7 +1,13 @@
 <div class="mb-3">
   <label class="form-label">Other filters (skeleton)</label>
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" id="onlyMine" disabled />
+    <input class="form-check-input" type="checkbox" id="onlyMine" disabled/>
     <label class="form-check-label" for="onlyMine">Only mine (placeholder)</label>
   </div>
+  @for (filter of (input|async)?.stats; track filter.name) {
+    <div class="form-label">{{ filter.name }}
+      <input class="form-check-input" type="radio" id="{{filter.name}}"/>
+      <label class="form-check-label" for="{{filter.name}}">{{ filter.value }} ({{ filter.count }})</label>
+    </div>
+  }
 </div>
