--- a/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
+++ b/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
@@ -4,10 +4,12 @@
     <input class="form-check-input" type="checkbox" id="onlyMine" disabled/>
     <label class="form-check-label" for="onlyMine">Only mine (placeholder)</label>
   </div>
-  @for (filter of (input|async)?.stats; track filter.name) {
-    <div class="form-label">{{ filter.name }}
-      <input class="form-check-input" type="radio" id="{{filter.name}}"/>
-      <label class="form-check-label" for="{{filter.name}}">{{ filter.value }} ({{ filter.count }})</label>
+  @for (filter of (input|async)?.stats|keyvalue; track filter.key) {
+    <div class="form-label">{{ filter.key }}
+      @for (value of filter.value; track value.value) {
+        <input class="form-check-input" type="radio" id="{{value.value}}"/>
+        <label class="form-check-label" for="{{value.value}}">{{ value.value }} ({{ value.count }})</label>
+      }
     </div>
   }
 </div>
