--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet/>
 
-<track-rejoice-loading-indicator [detectRouteTransitions]="true"/>
+<!--<track-rejoice-loading-indicator [detectRouteTransitions]="true"/>-->
