--- a/ui/src/app/private/sightings/sightings.component.html
+++ b/ui/src/app/private/sightings/sightings.component.html
@@ -1,64 +1,35 @@
-<section class="content">
-  <h1 class="page-title">Sightings</h1>
+<mat-toolbar color="primary">Fast, infinite scroll list</mat-toolbar>
 
-  <!-- Fixed header table -->
-  <div class="table-frame">
-    <table class="table table-striped table-hover table-fixed">
-      <colgroup>
-        <col style="width: 25%;">
-        <col style="width: 20%;">
-        <col style="width: 25%;">
-        <col style="width: 15%;">
-        <col style="width: 15%;">
-      </colgroup>
-      <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Owner</th>
-        <th scope="col">Created At</th>
-        <th scope="col">Remove after matching</th>
-        <th scope="col">Action</th>
+<div class="table-shell mat-elevation-z2">
+  <!-- Fixed header -->
+  <table class="mat-mdc-table header-table" aria-hidden="true">
+    <thead class="mat-mdc-header-row">
+    <tr class="mat-mdc-header-row">
+      <th class="mat-mdc-header-cell col-id">Id</th>
+      <th class="mat-mdc-header-cell col-owner">Owner</th>
+      <th class="mat-mdc-header-cell col-ts">Updated At</th>
+    </tr>
+    </thead>
+  </table>
+
+  <!-- Virtualized body -->
+  <cdk-virtual-scroll-viewport
+    class="viewport"
+    [itemSize]="rowHeight"
+    (scrolledIndexChange)="onScrollIndexChange($event)">
+
+    <table class="mat-mdc-table body-table">
+      <tbody>
+      <tr
+        class="mat-mdc-row"
+        *cdkVirtualFor="let row of sightings(); trackBy: trackBySightingId">
+        <td class="mat-mdc-cell col-id">{{ row.sightingId }}</td>
+        <td class="mat-mdc-cell col-owner">{{ row.ownerId }}</td>
+        <td class="mat-mdc-cell col-ts">
+          {{ row.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}
+        </td>
       </tr>
-      </thead>
+      </tbody>
     </table>
-
-    <!-- Scrollable body with virtual rows -->
-    <cdk-virtual-scroll-viewport
-      class="viewport"
-      [itemSize]="44"
-      (scrolledIndexChange)="onScrollIndexChange($event)">
-
-      <table class="table table-striped table-hover table-fixed">
-        <colgroup>
-          <col style="width: 25%;">
-          <col style="width: 20%;">
-          <col style="width: 25%;">
-          <col style="width: 15%;">
-          <col style="width: 15%;">
-        </colgroup>
-
-        <tbody>
-        <tr *cdkVirtualFor="let sighting of sightings(); trackBy: trackBySightingId">
-          <td>{{ sighting.sightingId }}</td>
-          <td>{{ sighting.ownerId }}</td>
-          <td>{{ sighting.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}</td>
-          <td>{{ sighting.removeAfterMatching }}</td>
-          <td>
-            <button class="btn btn-outline-danger btn-sm" (click)="deleteSighting(sighting)">
-              Delete
-            </button>
-            <a routerLink="/sightings/{{ sighting.sightingId }}" class="btn btn-primary">View</a>
-          </td>
-        </tr>
-
-        @if (sightings().length === 0) {
-          <tr>
-            <td colspan="4">No sightings yet.</td>
-          </tr>
-        }
-        </tbody>
-      </table>
-
-    </cdk-virtual-scroll-viewport>
-  </div>
-</section>
+  </cdk-virtual-scroll-viewport>
+</div>
