--- a/ui/src/app/private/sighting-boilerplate/sighting-boilerplate.component.html
+++ b/ui/src/app/private/sighting-boilerplate/sighting-boilerplate.component.html
@@ -1,9 +1,11 @@
 <mat-grid-list cols="4" gutterSize="10px">
-  <mat-grid-tile-header><h1>Sightings</h1></mat-grid-tile-header>
+  <mat-toolbar color="primary">Sightings</mat-toolbar>
   <mat-grid-tile>
     <track-rejoice-filter-sidebar (facetChange)="filterChange$.next($event)"/>
   </mat-grid-tile>
   <mat-grid-tile colspan="3">
-    <track-rejoice-sightings [filterUpdate$]="filterChange$"/>
+    <div style="height: 100%;width: 100%;">
+      <track-rejoice-sightings [filterUpdate$]="filterChange$"/>
+    </div>
   </mat-grid-tile>
 </mat-grid-list>
