--- a/ui/src/app/private/sightings/sightings.component.html
+++ b/ui/src/app/private/sightings/sightings.component.html
@@ -1,55 +1,68 @@
-<table mat-table [dataSource]="dataSource" [trackBy]="trackBySightingId" class="mat-elevation-z2" [fixedLayout]="true">
+<div class="main-grid">
+  <section class="table-pane">
+    <table mat-table [dataSource]="dataSource" [trackBy]="trackBySightingId" class="mat-elevation-z2"
+           [fixedLayout]="true">
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef sticky>Id</th>
-  </ng-container>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef sticky>Id</th>
+      </ng-container>
 
-  <ng-container matColumnDef="ownerId">
-    <th mat-header-cell *matHeaderCellDef sticky>Owner</th>
-  </ng-container>
+      <ng-container matColumnDef="ownerId">
+        <th mat-header-cell *matHeaderCellDef sticky>Owner</th>
+      </ng-container>
 
-  <ng-container matColumnDef="timestamp">
-    <th mat-header-cell *matHeaderCellDef sticky>Updated At</th>
-  </ng-container>
+      <ng-container matColumnDef="timestamp">
+        <th mat-header-cell *matHeaderCellDef sticky>Updated At</th>
+      </ng-container>
 
-  <ng-container matColumnDef="removeAfterMatching">
-    <th mat-header-cell *matHeaderCellDef sticky>Remove After Matching</th>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-</table>
+      <ng-container matColumnDef="removeAfterMatching">
+        <th mat-header-cell *matHeaderCellDef sticky>Remove After Matching</th>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    </table>
 
 
-<cdk-virtual-scroll-viewport
-  class="viewport"
-  [itemSize]="rowHeight"
-  (scrolledIndexChange)="onScrollIndexChange($event)">
+    <cdk-virtual-scroll-viewport
+      class="viewport"
+      [itemSize]="rowHeight"
+      (scrolledIndexChange)="onScrollIndexChange($event)">
 
-  <table mat-table [dataSource]="dataSource" [trackBy]="trackBySightingId" class="mat-elevation-z2"
-         [fixedLayout]="true">
+      <table mat-table [dataSource]="dataSource" [trackBy]="trackBySightingId" class="mat-elevation-z2"
+             [fixedLayout]="true">
 
-    <ng-container matColumnDef="id">
-      <td mat-cell *matCellDef="let row">{{ row.sightingId }}</td>
-    </ng-container>
+        <ng-container matColumnDef="id">
+          <td mat-cell *matCellDef="let row">{{ row.sightingId }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="ownerId">
-      <td mat-cell *matCellDef="let row">{{ row.ownerId }}</td>
-    </ng-container>
+        <ng-container matColumnDef="ownerId">
+          <td mat-cell *matCellDef="let row">{{ row.ownerId }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="timestamp">
-      <td mat-cell *matCellDef="let row">
-        {{ row.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="timestamp">
+          <td mat-cell *matCellDef="let row">
+            {{ row.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}
+          </td>
+        </ng-container>
 
-    <ng-container matColumnDef="removeAfterMatching">
-      <td mat-cell *matCellDef="let row">
-        {{ row.removeAfterMatching }}
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="removeAfterMatching">
+          <td mat-cell *matCellDef="let row">
+            {{ row.removeAfterMatching }}
+          </td>
+        </ng-container>
 
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="clickedRow = row" [class.row-is-clicked]="clickedRow == row"></tr>
-  </table>
-</cdk-virtual-scroll-viewport>
-<div>
-  Items fetched: {{ sightings()?.length }}
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="clickedRow() == row ? clickedRow.set(null) : clickedRow.set(row)"
+            [class.row-is-clicked]="clickedRow() == row"></tr>
+      </table>
+    </cdk-virtual-scroll-viewport>
+  </section>
+  <section class="details-pane">
+    <div>
+      @if (clickedRow() != null) {
+        <track-rejoice-selected-item [selectedItem]="clickedRow()"/>
+      } @else {
+        Items fetched: {{ sightings()?.length }}
+      }
+    </div>
+  </section>
 </div>
