Add `mockStatsInterceptor` for facet stats mocking; update `SightingBoilerplateComponent` and `FilterSidebarComponent` for dynamic facet stats handling with Angular Material components.

--- a/ui/src/app/private/sighting-boilerplate/sighting-boilerplate.component.html
+++ b/ui/src/app/private/sighting-boilerplate/sighting-boilerplate.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">Sightings</mat-toolbar>
 <mat-sidenav-container class="example-container">
   <mat-sidenav position="start" mode="side" opened>
-    <track-rejoice-filter-sidebar (facetChange)="filterChange$.next($event)"/>
+    <track-rejoice-filter-sidebar [facetFields]="facetFields" (facetChange)="filterChange$.next($event)"/>
   </mat-sidenav>
   <mat-sidenav-content>
     <track-rejoice-sightings [filterUpdate$]="filterChange$"/>
