--- a/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
+++ b/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
@@ -9,23 +9,17 @@
     <label for="term" class="form-label">Search</label>
     <div class="form-text">Sent as query parameter to the listing endpoint.</div>
   </div>
-  <div class="mb-3" formGroupName="facets">
-    <label class="form-label">Other filters (skeleton)</label>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="onlyMine" disabled/>
-      <label class="form-check-label" for="onlyMine">Only mine (placeholder)</label>
-    </div>
-      @for (filter of getFacetStats|async|keyvalue; track filter.key; let i = $index) {
+  @if (((getFacetStats|async) !=null) && ready()) {
+    <div class="mb-3" formGroupName="facets">
+      @for (filter of getFacetStats|async|keyvalue; track filter.key) {
         <h2>{{ filter.key | titlecase }}</h2>
-        <ul formArrayName="{{filter.key}}">
+        <div [formGroupName]="filter.key">
           @for (value of filter.value; track value.value) {
-            <li>
-              <mat-checkbox formControlName="{{$index}}">
-                {{ value.value }} ({{ value.count }})
-              </mat-checkbox>
-              </li>
+            <mat-checkbox [formControlName]="value.value">
+              {{ value.value }} ({{ value.count }})
+            </mat-checkbox>
           }
-        </ul>
+        </div>
         <!--<mat-radio-group class="radio-stack" aria-label="{{filter.key}}" formControlName="{{filter.key}}">
           @for (value of filter.value; track value.value) {
             <mat-radio-button labelPosition="before" value="{{value.value}}"
@@ -36,8 +30,9 @@
           }
         </mat-radio-group>-->
       }
-  </div>
-  <div class="d-grid gap-2">
-    <a routerLink="/sightings/new" class="btn btn-primary">Create Sighting</a>
-  </div>
+    </div>
+    <div class="d-grid gap-2">
+      <a routerLink="/sightings/new" class="btn btn-primary">Create Sighting</a>
+    </div>
+  }
 </form>
