Integrate Angular Material buttons across components, update styles for improved UI consistency, and enhance templates with `MatButton` and `MatFabButton`.

--- a/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
+++ b/ui/src/app/private/filter-sidebar/filter-sidebar.component.html
@@ -22,6 +22,6 @@
     }
   </div>
   <div class="d-grid gap-2">
-    <a routerLink="/sightings/new" class="btn btn-primary">Create Sighting</a>
+    <a matButton="filled" routerLink="/sightings/new">Create Sighting</a>
   </div>
 </form>
