--- a/ui/src/app/private/sighting-create/sighting-create.component.html
+++ b/ui/src/app/private/sighting-create/sighting-create.component.html
@@ -4,25 +4,25 @@
 <div class="example-container">
   <form [formGroup]="form" (ngSubmit)="create()">
     <div>
-      <div class="example-form-fields" formGroupName="coords">
+      <div class="example-form-fields" formGroupName="sightingDetails">
         <mat-form-field hideRequiredMarker="true">
           <mat-label>Latitude</mat-label>
           <input type="number" matInput placeholder="e.g. 4.9876" formControlName="lat"/>
-          @if (form.controls.coords.controls.lat.errors) {
-            <mat-error>{{ form.controls.coords.controls.lat | printerror }}</mat-error>
+          @if (form.controls.sightingDetails.controls.lat.errors) {
+            <mat-error>{{ form.controls.sightingDetails.controls.lat | printerror }}</mat-error>
           }
         </mat-form-field>
         <mat-form-field hideRequiredMarker="true">
           <mat-label>Longitude</mat-label>
           <input type="number" matInput placeholder="e.g. 52.1234" formControlName="lng"/>
-          @if (form.controls.coords.controls.lng.errors) {
-            <mat-error>{{ form.controls.coords.controls.lng | printerror }}</mat-error>
+          @if (form.controls.sightingDetails.controls.lng.errors) {
+            <mat-error>{{ form.controls.sightingDetails.controls.lng | printerror }}</mat-error>
           }
         </mat-form-field>
       </div>
       <div class="example-form-fields">
         <mat-form-field hideRequiredMarker="true">
-          <mat-select formControlName="type">
+          <mat-select formControlName="subtype">
             <mat-option value="cat">Cat</mat-option>
             <mat-option value="dog">Dog</mat-option>
           </mat-select>
