--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -42,7 +42,7 @@ form {
   max-width: 40rem;
   margin: 3rem auto;
   padding: 2rem;
-  background: linear-gradient(180deg, #253c3c, #1d4949);
+  /*background: linear-gradient(180deg, #253c3c, #1d4949);*/
   border-radius: 8px;
   box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
 }
@@ -114,7 +114,6 @@ fieldset {
   flex-wrap: wrap;
   gap: 0.5rem;
   color: #ffca99;
-  height: 0.5rem;
   padding: 0.25rem 0 0 0;
   height: 1.5rem;
   margin-bottom: 1rem;
